# dash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config-wasi.h
src/: eval.c  reactor.c  wasi-stubs.c
wasi-compat/: setjmp.h  termios.h
wasi-compat/sys/: ioctl.h  mman.h  resource.h  wait.h
